# ukrainiada-fest-menu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .reviewbot.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.prod.yml  fill_categories.py  fill_full_menu.py  fill_po_translations.py  fill_tags.py  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
core_settings/: __init__.py  asgi.py  celery.py  context_processors.py  forms.py  middleware.py  tests_landing.py  tests_pwa.py  timeouts.py  types.py  urls.py  views.py  wsgi.py
core_settings/settings/: base.py  ci.py  dev.py  env.py  prod.py
doc/news/: general_description.md
doc/test_plans/: kitchen_flow_manual_tests.md  manager_flow_manual_tests.md
feedback/: admin.py  models.py  services.py  tests.py  urls.py  views.py
feedback/migrations/: 0001_initial_feedback.py
fixtures/: menu_data.json
kitchen/: admin.py  helpers.py  models.py  services.py  stats.py  tasks.py  tests.py  tests_handoff.py  tests_manual_handoff.py  urls.py  views.py
kitchen/migrations/: 0001_initial_kitchen_models.py  0002_alter_kitchenticket_assigned_to.py  0003_add_escalation_level.py  0004_handoff_model.py  0005_ticket_per_portion.py  0006_add_ticket_delivery_fields.py  0007_add_handed_off_at.py
menu/: admin.py  forms.py  models.py  tests.py  tests_i18n.py  tests_translation.py  translation.py  urls.py  validators.py  views.py
menu/migrations/: 0001_initial.py  0002_add_category_number_in_line.py  0003_populate_category_order.py  0004_add_dish_availability.py  0005_add_translation_fields.py  0006_add_allergen_model.py  0007_add_hr_bs_it_translation_fields.py  0008_rename_sr_to_cnr_language.py
menu/templatetags/: menu_extras.py
news/: admin.py  apps.py  context_processors.py  delivery.py  forms.py  models.py  tasks.py  tests.py  translation.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_add_translation_feedback.py  0003_add_article_comment.py  0004_add_digest_subscription.py  0005_add_topic_newstag_description_and_logos.py  0006_replace_topic_with_primary_tag.py
notifications/: channels.py  events.py  redis_publish.py  schemas.py  tests.py  tests_visitor_sse.py  urls.py  views.py
orders/: admin.py  cart.py  context_processors.py  escalation_ownership.py  escalation_services.py  event_log.py  event_messages.py  helpers.py  manager_urls.py  manager_views.py  models.py  services.py  stats.py  tasks.py  tests.py  tests_access_token.py  tests_cart_controls.py  tests_deliver.py  tests_escalation.py  tests_handoff_confirm.py  tests_location_hint.py  tests_order_edit.py  tests_order_events.py  tests_order_tracking.py  tests_step_escalation.py  urls.py  views.py  waiter_urls.py  waiter_views.py
orders/migrations/: 0001_initial_order_models.py  0002_add_payment_method_and_escalation.py  0003_increase_payment_method_max_length.py  0004_add_location_hint.py  0005_add_access_token.py  0006_add_visitor_escalation.py  0007_add_order_event.py  0008_split_approved_to_accepted_verified.py  0009_add_auto_skip_to_order_event.py  0010_add_actor_to_orderevent.py  0011_add_accepted_at_and_step_escalation.py  0012_add_cancelled_status.py  0013_add_event_i18n_fields.py
orders/templatetags/: order_extras.py
plan/: PLAYWRIGHT_FINDINGS.md  PROJECT.md  REVIEW_AND_TESTING.md  ROADMAP.md  SPRINT_FIX_PLAN.md  Z5_ORDER_EDITING.md
plan/sprint-0/: SPRINT.md
plan/sprint-1/: SPRINT.md
plan/sprint-10/: SPRINT.md
plan/sprint-11/: SPRINT.md
plan/sprint-2/: SPRINT.md
plan/sprint-3/: SPRINT.md
plan/sprint-4/: SPRINT.md
plan/sprint-5/: SPRINT.md
plan/sprint-6/: SPRINT.md
plan/sprint-7/: SPRINT.md
plan/sprint-8/: SPRINT.md
plan/sprint-9/: SPRINT.md
staticfiles/: manifest.json
staticfiles/css/: brand.css  terminal.css
staticfiles/js/: ajax_deliver.js  cart_ajax.js  kitchen_ajax.js  kitchen_poll.js  offline_detector.js  order_edit.js  order_tracker.js  sse_client.js  sw.js  terminal_log.js  waiter_poll.js  waiter_sse.js
telegram_bot/: apps.py  bot.py  tests.py  urls.py  verification.py  views.py
templates/: 403.html  base.html  form.html  landing.html  offline.html
templates/account/: login.html  signup.html
templates/components/: _back_button.html  _cart_controls.html  _dish_card.html  _install_pwa.html  _nav_pills.html  _navbar.html  _order_fab.html  _period_filter.html  _team_stats_kitchen.html  _team_stats_waiter.html  _waiter_order_accordion_item.html  _waiter_order_detail_card.html
templates/feedback/: board.html  moderate.html
templates/kitchen/: _column_content.html  _team_section.html  _ticket_card.html  dashboard.html  handoff_select_waiter.html
templates/legal/: privacy.html  terms.html
templates/menu/: category_confirm_delete.html  category_form.html  category_list.html  dish_confirm_delete.html  dish_detail.html  dish_form.html  dish_list.html  index.html  search_results.html  tag_confirm_delete.html  tag_form.html  tag_list.html
templates/news/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  moderate_comments.html  subscription.html
templates/orders/: cart.html  handoff_already_confirmed.html  handoff_confirm.html  handoff_expired.html  manager_dashboard.html  order_detail.html  order_history.html  pay_online.html  senior_waiter_dashboard.html  waiter_dashboard.html  waiter_order_detail.html  waiter_order_list.html
templates/registration/: _logout.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
templates/socialaccount/: login.html  signup.html
templates/translations/: edit.html  review.html
templates/user/: channels.html  profile.html  (+2 more)
translations/: admin.py  apps.py  constants.py  context_processors.py  gemini.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
user/: adapters.py  admin.py  constants.py  decorators.py  forms.py  models.py  roles.py  tests.py  tests_channels.py  tests_staff_display.py  urls.py  views.py
(+151 files in other folders)
